# Blog_Rust_App

./: Cargo.toml  README.md  diesel.toml
migrations/2025-03-25-055845_create_blogs/: up.sql
src/: actors.rs  db_models.rs  main.rs  messages.rs  schema.rs
src/routes/: configure_routes.rs  mod.rs  routes_services.rs
src/utils/: db_utils.rs
